[package]
name = "rcpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
env_logger = "0.9.0"
libc = "0.2.126"
log = "0.4.17"
notify-rust = "4.5.8"
